<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent">




    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/text_view"
        android:textAlignment="center"
        android:layout_marginLeft="@dimen/margin_right_left"
        android:layout_marginRight="@dimen/margin_right_left"
        android:padding="@dimen/padding"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BluesIII">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@color/BluesIII">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rb0"
                    android:textAlignment="center"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:padding="@dimen/padding"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rb3"
                    android:textAlignment="center"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:padding="@dimen/padding"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rb1"
                    android:textAlignment="center"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:padding="@dimen/padding"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rb2"
                    android:textAlignment="center"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginLeft="@dimen/margin_right_left"
                    android:layout_marginRight="@dimen/margin_right_left"
                    android:padding="@dimen/padding"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>



        </LinearLayout>

    </ScrollView>

</LinearLayout>
